--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -6,3 +6,7 @@
 /.vs/tftpd32/v16/Preview
 /obj/Win32/Release
 /.vs/tftpd32/v16
+
+# Manually added ignores
+**/.DS_Store
+**/desktop.ini
