--- a/src/_gui/tftpd32.rc
+++ b/src/_gui/tftpd32.rc
@@ -122,7 +122,7 @@ BEGIN
                     IDC_TXT_BAD_SERVICES,10,87,120,30
 END
 
-// Positions overriden in gui_settings.c
+// Positions overridden in gui_settings.c
 IDD_DIALOG_ABOUT DIALOG  30, 10, 199, 142
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "TITLE set to: About Tftpdxx"
