--- a/src/_gui/tftpd32.rc
+++ b/src/_gui/tftpd32.rc
@@ -9,8 +9,8 @@
 //
 
 1 VERSIONINFO
- FILEVERSION 4,64,0,0
- PRODUCTVERSION 4,64,0,0
+ FILEVERSION 4,70,0,0
+ PRODUCTVERSION 4,70,0,0
  FILEFLAGSMASK 0x0L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -29,7 +29,7 @@ BEGIN
             VALUE "FileDescription", "TFTP server"
             VALUE "LegalCopyright", "see license in about box"
             VALUE "OriginalFileName", "tftpd32"
-            VALUE "ProductVersion", "4.64"
+            VALUE "ProductVersion", "4.70"
         END
     END
     BLOCK "VarFileInfo"
@@ -122,7 +122,7 @@ BEGIN
                     IDC_TXT_BAD_SERVICES,10,87,120,30
 END
 
-// Positions overriden in gui_settings.c
+// Positions overridden in gui_settings.c
 IDD_DIALOG_ABOUT DIALOG  30, 10, 199, 142
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "TITLE set to: About Tftpdxx"
@@ -252,16 +252,16 @@ BEGIN
     CTEXT           "0 byte transferred",IDC_FILE_STATS,0,11,169,10
 END
 
-IDD_DIALOG_SHDIR DIALOG  6, 18, 219, 112
+IDD_DIALOG_SHDIR DIALOG  6, 18, 239, 112
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "TITLE Set to: Tftpd32: directory"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "Close",IDOK,10,92,50,14
     // PUSHBUTTON      "Cancel",IDCANCEL,56,92,38,14
-    PUSHBUTTON      "Copy",IDC_SD_COPY,120,92,38,14
-    PUSHBUTTON      "Explorer",IDC_SD_EXPLORER,166,92,38,14
-    LISTBOX         IDC_LB_SHDIR,6,6,207,88,LBS_SORT | LBS_USETABSTOPS | LBS_NODATA | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Copy",IDC_SD_COPY,140,92,38,14
+    PUSHBUTTON      "Explorer",IDC_SD_EXPLORER,186,92,38,14
+    LISTBOX         IDC_LB_SHDIR,6,6,227,88,LBS_SORT | LBS_USETABSTOPS | LBS_NODATA | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
 END
 
 
